# boat_slam

./: CMakeLists.txt  Dockerfile  global_planner_plugin.xml  package.xml
bagfiles/: lidar_data.bag  office_lidar.bag
configuration_files/: backpack_2d.lua  base_local_planner_params.yaml  costmap_common_params.yaml  pose_graph.lua  trajectory_builder_2d.lua
launch/: lidar.launch  move_base.launch  navigation.launch  navigation_no_lidar.launch  slam.launch  slam_no_lidar.launch  start.launch  test.launch
src/: drive_controller.cpp  global_planner.cpp  global_planner.h  map_receiver.cpp
urdf/: backpack_2d.urdf
