<?xml version="1.0"?>
<package format="2">
  <name>boat_slam</name>
  <version>0.1.0</version>
  <description>The boat_slam package</description>
 
  <maintainer email="jhlenes@outlook.com">Henrik</maintainer>
  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cartographer_ros</build_depend>
  <build_depend>rplidar_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  
  <build_export_depend>cartographer_ros</build_export_depend>
  <build_export_depend>rplidar_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>


  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

</package>
