<?xml version="1.0"?>
<package format="2">
  <name>boat_slam</name>
  <version>0.1.0</version>
  <description>The boat_slam package</description>
 
  <maintainer email="jhlenes@outlook.com">Henrik</maintainer>
  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cartographer_ros</build_depend>
  <build_depend>rplidar_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>costmap_2d</build_depend>

  
  <build_export_depend>cartographer_ros</build_export_depend>
  <build_export_depend>rplidar_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>nav_core</build_export_depend>
  <build_export_depend>base_local_planner</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>costmap_2d</build_export_depend>

  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>costmap_2d</exec_depend>

    <export>
        <nav_core plugin="${prefix}/global_planner_plugin.xml" />
    </export>

</package>
